--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,7 +9,10 @@ body {
     height: 100%
 }
 h1 {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Cambria', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0 auto;
+    text-align: left;
+    display: inline;
 }
 h2 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -26,12 +29,17 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+#h2_white {
+    color: white;
+}
+
 #div1 {
     display: flex;
-    background-color: #4D6180;
+    background-color: #1DA1F2;
     width: 100%;
     height: 100px;
 }
+
 #div2 {
     display: flex;
     background-color: aliceblue;
@@ -43,94 +51,38 @@ p {
     min-height: 100%;
 }
 
+#inner_div {
+    background-color: #0F5480;
+    padding: 20px;
+}
+
+#text_div {
+    width: 75%;
+    margin: 0 auto;
+}
+
 #main {
     overflow: auto;
     padding-bottom: 100px;
 }
 
-h1 {
-    margin: 0 auto;
-    text-align: center;
-    display: inline;
-}
-
 #footer {
-    background-color: #4D6180;
+    background-color: #1DA1F2;
     position: relative;
-    height: 50px;
-    margin-top: -50px;
+    height: 65px;
+    margin-top: -65px;
     clear: both;
 }
 
 #footer-text {
-    padding: 15px;
+    padding: 20px;
     color: white;
 }
 
 .header {
     color: white;
     padding-top: 30px;
-}
-
-.portrait {
-    height: 280px;
-    width: 280px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.picture {
-    background-color: #263040;
-    display: block;
-    text-align: center;
-}
-
-.connection_pic {
-    height: 65px;
-    width: 65px;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    margin-bottom: -2px;
-    padding-right: 20px;
-    padding-left: 20px;
-}
-
-.connection_pic_github {
-    height: 61px;
-    width: 65px;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    padding-left: 20px;
-    padding-right: 25px;
-}
-
-.connection_pic_resume {
-    height: 55px;
-    width: 65px;
-    text-align: center;
-    padding-top: 10px;
-    margin-bottom: 3px;
-    padding-bottom: 5px;
-    padding-left: 20px;
-    padding-right: 25px;
-}
-
-.connection_pic_email {
-    height: 75px;
-    width: 65px;
-    text-align: center;
-    margin-bottom: -8px;
-    padding-top: 10px;
-    padding-left: 20px;
-    padding-right: 25px;
-    padding-bottom: 5px;
-}
-
-.uwinlogo {
-    height: 65px;
-    width: 200px;
+    padding-left: 10px;
 }
 
 .delete_button {
@@ -138,7 +90,7 @@ h1 {
     width: 25px;
 }
 #backButton {
-    background-color: #4D6180;
+    background-color: #1DA1F2;
     border: none; 
     color: white; 
     font-size: 16px;
@@ -146,7 +98,7 @@ h1 {
     transition-duration: 0.3s;
 }
 #backButton:hover {
-    background-color: #263040;
+    background-color: #0F5480;
     color: white;
 }
 
@@ -156,6 +108,11 @@ h1 {
 
 #main_text {
     color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+#main_text_white {
+    color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
