--- a/templates/cancelMe.html
+++ b/templates/cancelMe.html
@@ -49,9 +49,7 @@
                 <br><br>
                 You may find that some words are not cancel-worthy in the given context of the tweet. If that is the case, please ignore.
                 <br><br>
-                Ultimately, I hope this can be used responsibly.
-                <br><br>
-                Lastly, I hope you enjoy it. :)
+                Ultimately, I hope this can be used responsibly. And lastly, I hope you enjoy it. :)
             </p>
             </div>
         </div>
