--- a/templates/cancelMe_Error.html
+++ b/templates/cancelMe_Error.html
@@ -25,7 +25,7 @@
                 <div id="text_div">
                 <h1 style="color: red;">There has been an error!<br> Reason: {{ error_message }}</h1>
                 {% if 'Max Number of Requests to the Twitter Server reached.' == error_message %}
-                <p id="main_text">This means that the website will <b>temporarily</b> not work since the max number of requests on my end has been reached. There is nothing for you to do on your end.</p>
+                <p id="main_text">This means that the website will <b>temporarily</b> not work since the max number of requests on my end has been reached. There is nothing for you to do on your end. Please try again in a few hours.</p>
                 <h4>Otherwise:</h4> 
                 <p id="main_text">You can go back to the homepage using the button below.</p>
                 {% else %}
