--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -54,7 +54,7 @@
                     <h1>You have {{ naughtyCount }} cancel-worthy tweet(s)</h1>
                     {% endif %}
                 {% else %}
-                    <h1>You are not cancelled!</h1>
+                    <h1>Congratulations, you are not cancelled!</h1>
                 {% endif %}
                 {% if nextTokenBool == True %}
                     <h3>There were more than 300 tweets found, please delete some then sign in again to get the rest.</h3>
