changed to free version. took away a few words to fit nicer.

--- a/templates/cancelMe_Callback.html
+++ b/templates/cancelMe_Callback.html
@@ -93,7 +93,7 @@
                 {% else %}
                     
                 {% endif %}
-
+                <h4>Due to this being a free version, the search is limited to only 10 words. Therefore, it is not an extensive list.</h4>
             </div>
         </div>
 
